--- a/contacts.html
+++ b/contacts.html
@@ -26,7 +26,7 @@
 
             <div class="art-shapes">
                 <h1 class="art-headline" data-left="0.31%">
-                    <a href="#">CyberWay</a>
+                    <a href="#">CyberWayExperts</a>
                 </h1>
                 <h2 class="art-slogan" data-left="0.31%">OTP,Quality Center,Automation<br /> Framework Designing....</h2>
                 <div class="art-object0" data-left="0%"></div>
