--- a/home.html
+++ b/home.html
@@ -13,7 +13,18 @@
     <script src="jquery.js"></script>
     <script src="script.js"></script>
     <script src="script.responsive.js"></script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
+        ga('create', 'UA-78492139-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </head>
 <body>
     <div id="art-main">
@@ -26,9 +37,20 @@
 
             <div class="art-shapes">
                 <h1 class="art-headline" data-left="0.31%">
-                    <a href="#">CyberWayExperts</a>
+                    <a href="#">CyberWay</a>
                 </h1>
-                <h2 class="art-slogan" data-left="0.31%">OTP,Quality Center,Automation<br /> Framework Designing....</h2>
+
+                <div class="art-slogan" data-left="0.31%">
+                    <p>(Provides Professional Training on S/W Testing Trends)</p><br />
+                    <ul style="color: #ffffff !important; font-size: 14px !important; margin-left:20px !important; list-style-type: circle !important; ">
+                        <li>Manual Testing</li>
+                        <li>Agile Testing</li>
+                        <li>Automation Testing (QTP/UFT, Selenium, JMeter, Test Complete)</li>
+                        <li>Defect Tracking Tools (Quality Center/ALM, Bugzilla, Jira)</li>
+                        <li>Security Testing</li>
+                        <li>Test Optimization Techniques (Increase Testing efficiency)</li>
+                    </ul>
+                </div>
                 <div class="art-object0" data-left="0%"></div>
             </div>
 
@@ -40,24 +62,25 @@
                 <div class="art-content-layout">
                     <div class="art-content-layout-row">
                         <div class="art-layout-cell art-content clearfix">
-                            <article class="art-post art-article">    
-                                <h2 class="art-postheader">Software Testing</h2>                            
-                                <div class="art-postcontent art-postcontent-0 clearfix">                                    
+                            <article class="art-post art-article">
+                                <h2 class="art-postheader">Software Testing</h2>
+                                <div class="art-postcontent art-postcontent-0 clearfix">
                                     <div>
                                         <p>Is one of the fastest growing division of IT Industry and having tremendous carrier opportunities at present/in coming time. Please let me know if you want to be masters of Software Testing.</p>
-                                        <p>&nbsp;</p>
-                                        <p><strong>Register today for Week End batches </strong>( Saturday and Sunday, 2 Hrs/Session) &ndash;</p>
-                                        <p><strong>1) Manual Testing Concepts </strong>(8 Sessions)</p>
-                                        <p><strong>&nbsp;</strong></p>
-                                        <p><strong>2) Basic QTP</strong> &nbsp;(8 Sessions) ---- Record &amp; Play Back, Checkpoints, Synchronization, Actions, Object Spy, Object Repository,&nbsp;Regular Expressions, Parameterization, Report Results.</p>
-                                        <p><strong>&nbsp;</strong></p>
-                                        <p><strong>3) Advance QTP</strong> (8 Sessions) ---- Mastering QTP along with VB Script, Descriptive Programming, Frameworks and many more essential topics.</p>
-                                        <p><strong>&nbsp;</strong></p>
-                                        <p><strong>4) Emerging Trends In Software Testing</strong> (6 Sessions) ---- Test Optimization Techniques (RBT, OATS, CTP etc), Software Test Metrics , Test Management Concepts.</p>
-                                        <p>&nbsp;</p>
-                                    </div>
-                             </div>
 
+                                    </div>
+                                </div>
+                                <h2 class="art-postheader">Register today for Week End batches( Saturday and Sunday, 2 Hrs/Session) &ndash;</h2>
+                                <div class="art-postcontent art-postcontent-0 clearfix">
+                                    <p><strong>1) Manual Testing Concepts </strong>(8 Sessions)</p>
+                                    <p><strong>&nbsp;</strong></p>
+                                    <p><strong>2) Basic QTP</strong> &nbsp;(8 Sessions) ---- Record &amp; Play Back, Checkpoints, Synchronization, Actions, Object Spy, Object Repository,&nbsp;Regular Expressions, Parameterization, Report Results.</p>
+                                    <p><strong>&nbsp;</strong></p>
+                                    <p><strong>3) Advance QTP</strong> (8 Sessions) ---- Mastering QTP along with VB Script, Descriptive Programming, Frameworks and many more essential topics.</p>
+                                    <p><strong>&nbsp;</strong></p>
+                                    <p><strong>4) Emerging Trends In Software Testing</strong> (6 Sessions) ---- Test Optimization Techniques (RBT, OATS, CTP etc), Software Test Metrics , Test Management Concepts.</p>
+                                    <p>&nbsp;</p>
+                                </div>
                             </article>
                         </div>
                     </div>
