--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Created by Artisteer v4.0.0.58413 -->
     <meta charset="utf-8">
-    <title>Contacts</title>
+    <title>Home</title>
     <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width">
     <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <link rel="stylesheet" href="style.css" media="screen">
@@ -30,47 +30,57 @@
     <div id="art-main">
         <nav class="art-nav clearfix">
             <div class="art-nav-inner">
-                <ul class="art-hmenu"><li><a href="home.html">Home</a></li><li><a href="contacts.html" class="active">Contacts</a></li></ul>
+                <ul class="art-hmenu"><li><a href="home.html" class="active">Home</a></li><li><a href="contacts.html">Contacts</a></li></ul>
             </div>
         </nav>
         <header class="art-header clearfix">
 
             <div class="art-shapes">
                 <h1 class="art-headline" data-left="0.31%">
-                    <a href="#">CyberWayExperts</a>
+                    <a href="#">CyberWay</a>
                 </h1>
-                <h2 class="art-slogan" data-left="0.31%">OTP,Quality Center,Automation<br /> Framework Designing....</h2>
+
+                <div class="art-slogan" data-left="0.31%">
+                    <p>(Provides Professional Training on S/W Testing Trends)</p><br />
+                    <ul style="color: #ffffff !important; font-size: 14px !important; margin-left:20px !important; list-style-type: circle !important; ">
+                        <li>Manual Testing</li>
+                        <li>Agile Testing</li>
+                        <li>Automation Testing (QTP/UFT, Selenium, JMeter, Test Complete)</li>
+                        <li>Defect Tracking Tools (Quality Center/ALM, Bugzilla, Jira)</li>
+                        <li>Security Testing</li>
+                        <li>Test Optimization Techniques (Increase Testing efficiency)</li>
+                    </ul>
+                </div>
                 <div class="art-object0" data-left="0%"></div>
             </div>
 
 
         </header>
+        <!--<div class="art-object1"></div>-->
         <div class="art-sheet clearfix">
             <div class="art-layout-wrapper clearfix">
                 <div class="art-content-layout">
                     <div class="art-content-layout-row">
                         <div class="art-layout-cell art-content clearfix">
                             <article class="art-post art-article">
-                                <h2 class="art-postheader">Contacts</h2>
-
+                                <h2 class="art-postheader">Software Testing</h2>
                                 <div class="art-postcontent art-postcontent-0 clearfix">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, tellus sit amet congue vulputate, nisi erat iaculis nibh, vitae feugiat sapien ante eget mauris.</p>
-                                    <p>Cras elit nisl, rhoncus nec iaculis ultricies, feugiat eget sapien. Pellentesque ac felis tellus. Aenean sollicitudin imperdiet arcu, vitae dignissim est posuere id. Duis placerat justo eu nunc interdum ultrices.</p>
-                                    <h2>Our Address</h2>
-                                    <p>
-                                        586 Main Ave, Building 42<br />
-                                        Main City, Country 12345-6789
-                                    </p>
-                                    <p>
-                                        T: (555) 123 - 4567<br />
-                                        F: (555) 523 - 4567
-                                    </p>
-                                    <p>
-                                        W: <a href="http://www.domain.com">http://www.domain.com</a><br />
-                                        E: <a href="mailto:email@domain.com">email@domain.com</a>
-                                    </p>
-                                </div>
+                                    <div>
+                                        <p>Is one of the fastest growing division of IT Industry and having tremendous carrier opportunities at present/in coming time. Please let me know if you want to be masters of Software Testing.</p>
 
+                                    </div>
+                                </div>
+                                <h2 class="art-postheader">Register today for Week End batches( Saturday and Sunday, 2 Hrs/Session) &ndash;</h2>
+                                <div class="art-postcontent art-postcontent-0 clearfix">
+                                    <p><strong>1) Manual Testing Concepts </strong>(8 Sessions)</p>
+                                    <p><strong>&nbsp;</strong></p>
+                                    <p><strong>2) Basic QTP</strong> &nbsp;(8 Sessions) ---- Record &amp; Play Back, Checkpoints, Synchronization, Actions, Object Spy, Object Repository,&nbsp;Regular Expressions, Parameterization, Report Results.</p>
+                                    <p><strong>&nbsp;</strong></p>
+                                    <p><strong>3) Advance QTP</strong> (8 Sessions) ---- Mastering QTP along with VB Script, Descriptive Programming, Frameworks and many more essential topics.</p>
+                                    <p><strong>&nbsp;</strong></p>
+                                    <p><strong>4) Emerging Trends In Software Testing</strong> (6 Sessions) ---- Test Optimization Techniques (RBT, OATS, CTP etc), Software Test Metrics , Test Management Concepts.</p>
+                                    <p>&nbsp;</p>
+                                </div>
                             </article>
                         </div>
                     </div>
@@ -128,7 +138,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </footer>
     </div>
