--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,18 @@
     <script src="jquery.js"></script>
     <script src="script.js"></script>
     <script src="script.responsive.js"></script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
+        ga('create', 'UA-78492139-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </head>
 <body>
     <div id="art-main">
@@ -26,9 +37,19 @@
 
             <div class="art-shapes">
                 <h1 class="art-headline" data-left="0.31%">
-                    <a href="#">CyberWayExperts</a>
+                    <a href="#">CyberWay</a>
                 </h1>
-                <h2 class="art-slogan" data-left="0.31%">OTP,Quality Center,Automation<br /> Framework Designing....</h2>
+                <div class="art-slogan" data-left="0.31%">
+                    <p>(Provides Professional Training on S/W Testing Trends)</p><br />
+                    <ul style="color: #ffffff !important; font-size: 14px !important; margin-left:20px !important; list-style-type: circle !important; ">
+                        <li>Manual Testing</li>
+                        <li>Agile Testing</li>
+                        <li>Automation Testing (QTP/UFT, Selenium, JMeter, Test Complete)</li>
+                        <li>Defect Tracking Tools (Quality Center/ALM, Bugzilla, Jira)</li>
+                        <li>Security Testing</li>
+                        <li>Test Optimization Techniques (Increase Testing efficiency)</li>
+                    </ul>
+                </div>
                 <div class="art-object0" data-left="0%"></div>
             </div>
 
