--- a/contacts.html
+++ b/contacts.html
@@ -37,7 +37,7 @@
 
             <div class="art-shapes">
                 <h1 class="art-headline" data-left="0.31%">
-                    <a href="#">CyberWay</a>
+                    <a href="#">CyberWayExperts</a>
                 </h1>
                 <div class="art-slogan" data-left="0.31%">
                     <p>(Provides Professional Training on S/W Testing Trends)</p><br />
